--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
 						<div class="col-md-8 col-md-offset-2 subtext to-animate">
 							<h3>ALT+F4 was originally created as a social hub for the guidless, then it hit us: why not form our own guild?</h3>
                             <p>We're new to the Black Desert Online scene but we have veterans of the MMO genre and we're ambitious. Our goals: explore the world, slay some big-ass monsters, become famous crafters, and even claim some territory.</p>
+							<p>You can find us on Edan.</p>
 						</div>
 					</div>
 				</div>
@@ -160,28 +161,28 @@
 				<div class="col-md-3 col-sm-6 col-xs-12">
                       <div class="fh5co-counter to-animate">
                           <i class="fh5co-counter-icon icon-user to-animate-2"></i>
-                          <span class="fh5co-counter-number js-counter" data-from="0" data-to="14" data-speed="5000" data-refresh-interval="50">14</span>
+                          <span class="fh5co-counter-number js-counter" data-from="0" data-to="9" data-speed="5000" data-refresh-interval="50">9</span>
                           <span class="fh5co-counter-label">Members</span>
                       </div>
                   </div>
                   <div class="col-md-3 col-sm-6 col-xs-12">
                       <div class="fh5co-counter to-animate">
                           <i class="fh5co-counter-icon icon-trophy to-animate-2"></i>
-                          <span class="fh5co-counter-number js-counter" data-from="0" data-to="120" data-speed="5000" data-refresh-interval="50">120</span>
+                          <span class="fh5co-counter-number js-counter" data-from="0" data-to="0" data-speed="5000" data-refresh-interval="50">0</span>
                           <span class="fh5co-counter-label">Guild Missions</span>
                       </div>
                   </div>
                   <div class="col-md-3 col-sm-6 col-xs-12">
                       <div class="fh5co-counter to-animate">
                           <i class="fh5co-counter-icon icon-target to-animate-2"></i>
-                          <span class="fh5co-counter-number js-counter" data-from="0" data-to="3" data-speed="5000" data-refresh-interval="50">3</span>
+                          <span class="fh5co-counter-number js-counter" data-from="0" data-to="0" data-speed="5000" data-refresh-interval="50">0</span>
                           <span class="fh5co-counter-label">Nodes Conquered</span>
                       </div>
                   </div>
                   <div class="col-md-3 col-sm-6 col-xs-12">
                       <div class="fh5co-counter to-animate">
                           <i class="fh5co-counter-icon icon-flag to-animate-2"></i>
-                          <span class="fh5co-counter-number js-counter" data-from="0" data-to="1" data-speed="5000" data-refresh-interval="50">1</span>
+                          <span class="fh5co-counter-number js-counter" data-from="0" data-to="0" data-speed="5000" data-refresh-interval="50">0</span>
                           <span class="fh5co-counter-label">Territories Claimed</span>
                       </div>
                   </div>
@@ -203,28 +204,19 @@
 			</div>
             <div class="row">
 				<div class="col-md-4 rank-officer">
-					<h3>Madoka <span>Officer</span></h3>
+					<h3>Atreidez <span>Officer</span></h3>
 				</div>
                 <div class="col-md-4 rank-officer">
-					<h3>Najm <span>Officer</span></h3>
+					<h3>Van_Guard <span>Officer</span></h3>
 				</div>
                 <div class="col-md-4 rank-officer">
-					<h3>Aurora <span>Officer</span></h3>
+					<h3 class="vacant">Vacant <span>Officer</span></h3>
 				</div>
 			</div>
             <div class="row">
                 <div class="collapse" id="collapseMembers">
                     <ul class="list-group rank-member">
-                         <li class="list-group-item col-md-2">Hana <span>2/28/2016</span></li>
-                         <li class="list-group-item col-md-2">Jeremy <span>2/29/2016</span></li>
-                         <li class="list-group-item col-md-2">Saron <span>3/1/2016</span></li>
-                         <li class="list-group-item col-md-2">Kikyo <span>3/1/2016</span></li>
-                         <li class="list-group-item col-md-2">Nomi <span>3/1/2016</span></li>
-                         <li class="list-group-item col-md-2">Adala <span>3/2/2016</span></li>
-                         <li class="list-group-item col-md-2">Chrissy <span>3/3/2016</span></li>
-                         <li class="list-group-item col-md-2">Zer0 <span>3/3/2016</span></li>
-                         <li class="list-group-item col-md-2">Brett <span>3/5/2016</span></li>
-                         <li class="list-group-item col-md-2">Scottie <span>3/5/2016</span></li>
+                         <li class="list-group-item col-md-2">The_Muse <span>3/5/2016</span></li>
                     </ul>
                 </div>
 	        </div>
@@ -254,7 +246,7 @@
                 <h2 class="left-border to-animate fadeInUp animated">Join Us</h2>
                 <div class="row">
                     <div class="col-md-8 subtext to-animate fadeInUp animated">
-                        <h3>Just head over to our <a href="https://discord.gg/0rgZ14Ftu8wGlKqF" target="_blank">#recruitment channel</a> and get in touch.</h3>
+                        <h3>Just head over to our <a href="https://discord.gg/0rgZ14Ftu8xSWwzk" target="_blank">#recruitment channel</a> and get in touch.</h3>
                     </div>
                 </div>
             </div>
@@ -310,7 +302,7 @@
 		<div class="container">
 			<div class="">
 				<div class="col-md-12 text-center">
-					<p>&copy; Alt+F4. Some Rights Reserved.</p>
+					<p>&copy; ALT+F4 Guild. Some Rights Reserved.</p>
 					
 				</div>
 			</div>
